@@ -18,13 +18,14 @@ icon_DATA =\
 	$(icon_in_files:.icon.in=.icon)
 	$(NULL)
 
-svg_DATA =\
-	emblem-favorite.svg \
-	emblem-generic.svg \
-	emblem-important.svg \
-	emblem-mail.svg \
-	emblem-special.svg \
-	emblem-urgent.svg \
+svg_DATA =				\
+	emblem-favorite.svg		\
+	emblem-generic.svg		\
+	emblem-important.svg		\
+	emblem-mail.svg			\
+	emblem-special.svg		\
+	emblem-symbolic-link.svg	\
+	emblem-urgent.svg		\
 	$(NULL)
 
 %.icon:   %.icon.in   $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*.po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache
